# skol

./: .gitignore  .mcp.json  ANNOTATED_VALUE_RENAME.md  AUTO_LOAD_FEATURE.md  CHANGELOG.md  CLAUDE.md  COALESCE_DURING_SAVE_FIX.md  COLUMN_NAME_FIX.md  COMPATIBILITY_MODULE.md  COUCHDB_INTEGRATION.md  COUCHDB_INTEGRATION_SUMMARY.md  COUCHDB_INVESTIGATION.md  COUCHDB_MCP_SETUP.md  CUDA_DEBUG_SCRIPTS.md  DISTRIBUTED_COUCHDB.md  EVALUATION_REFACTORING.md  EXTRACTING_TAXON_OBJECTS.md  EXTRACT_TAXA_SCHEMA_FIX.md  GPU_COMPATIBILITY.md  INSTRUMENTATION_GUIDE.md  LABEL_MAPPING_FIX.md  MANIFEST.in  MCP_QUICK_START.md  MERGE_SUMMARY.md  MODEL_REFACTORING.md  Makefile  PRESERVE_ATTACHMENT_NAME_IN_COALESCE.md  PRESERVE_METADATA_FIX.md  QUICKSTART_COUCHDB.md  QUICK_TEST_README.md  README.md  RNN_TESTING_GUIDE.md  SCHEMA_TYPE_FIX.md  SESSION_SUMMARY.md  TAXA_ID_JOIN_FIX.md  TAXA_JSON_TRANSLATOR.md  TAXA_ROUNDTRIP_EXAMPLE.md  TAXA_TRANSLATION_QUICKSTART.md  TAXON_CLUSTERING.md  TAXON_LOAD_METHOD.md  (+84 more)
.claude/: settings.json
IST664/: Final Project Proposal.docx  IST664_Team3_Balasi_Murphy_Osuga_Yarroll.docx  README.md
IST690/: Synoptic Key of Life website_ An Independent Study.md
IST691/: IST691_final_project_paper.docx  mistral_transfer_learning.ipynb  prompt_gemma3_12b.txt  prompt_gemma3_27b.txt  workspace.ipynb
IST718/: IST718_Final_Report_FINAL.docx
IST782/: La_Monte_HP_Yarroll_Portfolio_Initial_Draft.docx  Makefile  conclusion.pptx  key_themes.pptx  portfolio.docx  portfolio.md  portfolio2.docx  portfolio2.md  portfolio_plan.md  programming_discussion.md  skol_independent_study.bib
MASMC2025/: Synoptic Key of Life MASMC 2025_poster.odp
advanced-databases/: .gitignore  docker-compose.yaml  redis-entrypoint.sh  redis.conf
bibtex/: mt  sim
bugs/: failure.csv  plazi-bug-report.md  reproduce.sh
data/: LTWA_20160915.txt  nomenclatures.txt  personal_fungaria.json
debian/: copyright  postinst  postinst.template  prerm  prerm.template  skol.cron  (+1 more)
django/: .env.example  .gitignore  MANIFEST.in  PYTHON_COMPATIBILITY.md  QUICKSTART.md  README.md  RECREATE_EMBEDDINGS.sh  RESTART_SERVER.sh  build-deb.sh  oauth_users  pyproject.toml  requirements.txt  run_server.sh  setup.py  stdeb.cfg  test_api.sh  test_compatibility.py  test_search_tracing.py
django/accounts/: adapters.py  admin.py  apps.py  forms.py  models.py  signals.py  tokens.py  urls.py  views.py
django/accounts/management/commands/: check_user.py
django/contact/: forms.py  github.py  tests.py  urls.py  views.py
django/debian/: copyright  postinst  postinst.template  prerm  prerm.template  skol-django.service
django/docs/: DATABASE_SETUP.md  EMAIL_SETUP.md  HTTPS_SETUP.md  PDF_VIEWER.md
django/frontend/: package-lock.json  package.json  webpack.config.js
django/frontend/src/: CodeBlockExample.jsx  CollectionSelect.css  CollectionSelect.jsx  CommentForm.jsx  CommentNode.jsx  CommentThread.jsx  DiscussionWidget.css  DiscussionWidget.jsx  FeatureSelectionWidget.css  FeatureSelectionWidget.jsx  FungariumSelect.css  FungariumSelect.jsx  IdentifierTypeSelect.css  IdentifierTypeSelect.jsx  MetricsWidget.css  MetricsWidget.jsx  PDFViewer.jsx  ProjectMemberships.css  ProjectMemberships.jsx  ProjectSelect.css  ProjectSelect.jsx  SourceContextViewer.css  SourceContextViewer.jsx  VocabTreeWidget.css  VocabTreeWidget.jsx  codeBlockEntry.js  collectionSelectEntry.js  descriptionUtils.js  discussionEntry.js  featureSelectionEntry.js  fungariumSelectEntry.js  identifierTypeSelectEntry.js  index.js  projectMembershipsEntry.js  projectSelectEntry.js  sourceContextEntry.js  styles.css  vocabTreeEntry.js
django/inaturalist_provider/: inaturalist_provider_test.py  provider.py  urls.py  views.py
django/search/: __init__.py  admin.py  apps.py  comment_service.py  couchdb_sync.py  export_service.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
django/search/management/commands/: setup_comment_views.py  sync_collections_to_couchdb.py
django/search/migrations/: 0001_collections_feature.py  0002_seed_identifier_types.py  0003_add_collection_notes.py  0004_fungarium_identifier.py  0005_alter_externalidentifier_unique_together.py  0006_collection_nomenclature_embargo_usersettings.py  0007_searchhistory_event_types.py  0008_collection_flagged_by.py  0009_collection_hidden_collection_hidden_by.py  0010_usersettings_receive_admin_summary.py  0011_usersettings_results_per_page.py  0012_usersettings_feature_max_df_and_more.py  0013_measurementset.py  0014_measurement_unit.py  0015_add_default_experiment_to_usersettings.py  0016_collectionproject_project_collectionprojectremoval_and_more.py  0017_project_notes.py  0018_project_notes_log.py  0019_usage_event.py  0020_add_cbs_identifier_type.py  0021_update_cbs_url_pattern.py  0022_identifier_type_actions.py  0023_backfill_inat_cbs_actions.py
django/search/static/css/: taxon-result-widget.css
django/search/static/js/: taxon-result-widget.js
django/search/tests/: test_collection_models.py  test_collection_views.py  test_comment_views.py  test_export_service.py  test_feature_views.py  test_import_views.py  test_post_inat_comment.py  test_project_models.py  test_project_settings.py  test_project_views.py  test_search_views.py  test_source_context_view.py  test_usage_events.py
django/skolweb/: __init__.py  context_processors.py  manage.py  settings.py  urls.py  wsgi.py
django/templates/: about.html  collection_detail.html  collections.html  help.html  index.html  pdf_viewer.html  project_detail.html  sources.html
django/templates/accounts/: account_settings.html  base.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_sent.html  register.html  register_complete.html  resend_verification.html  social_connections.html  verify_email.html
django/templates/contact/: contact.html  feedback.html  success.html
django/templates/emails/: password_reset.html  password_reset.txt  verify_email.html  verify_email.txt
django/templates/socialaccount/: authentication_error.html  connections.html  login_cancelled.html
(+725 files in other folders)
