[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skol"
version = "0.3.0"
description = "Taxonomic text classification and extraction pipeline for mycological literature"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Christopher Murphy"},
    {name = "La Monte Henry Piggy Yarroll"},
    {name = "David Caspers"},
]
keywords = [
    "text classification",
    "taxonomy",
    "mycology",
    "nlp",
    "pyspark",
    "machine learning",
    "couchdb",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.14"

dependencies = [
    "CouchDB>=1.2",
    "numpy",
    "pandas",
    "pyarrow>=15.0.0",
    "pyspark>=4.0.0",
    "redis>=4.0.0",
    "regex>=2024.0.0",
    "requests>=2.32.0",
    "scikit-learn>=1.0.0",
    "tqdm",
    "python-dateutil>=2.9.0",
    # Required by the ingestors package which is part of the core
    # distribution.  ingestors/__init__.py exports Ingestor (imports
    # bibtexparser, feedparser, beautifulsoup4 at module load) and
    # RateLimitedHttpClient (imports pypaperretriever).  Moving any of
    # these to the [ingest] optional group breaks `from ingestors
    # import ...` in every bin/ script that touches publication data.
    "bibtexparser>=2.0.0b3",
    "feedparser>=6.0.12",
    "beautifulsoup4>=4.14.2",
    "pypaperretriever",
    # Linear-chain CRF on top of torch — used by v4 layout + treatment
    # passes (skol_classifier/v4/crf_layout.py imports torchcrf
    # unconditionally at module load).
    "pytorch-crf>=0.7.2",
]

[project.optional-dependencies]
ml = [
    # tensorflow + tf-keras intentionally absent: the only remaining TF code
    # is legacy RNN paths (skol_classifier/rnn_model.py and the RNN branches
    # of classifier_v2.py), all gated by try/except ImportError → KERAS_AVAILABLE
    # fallbacks.  v3 logistic + v4 CRF (the actually-used pipelines) use
    # torch / transformers, not TF.  TF also doesn't ship for Python 3.14
    # yet, so listing it as an optional dep would break `pip install`.
    "torch",
    "transformers>=4.44.0",
    "sentence-transformers[onnx-gpu]>=3.0.1",
    "accelerate>=1.12.0",
    "huggingface-hub>=0.35.0",
    "peft>=0.7.0",
    "protobuf",
    "sentencepiece",
    "bitsandbytes",
    "spark-nlp",
]
pdf = [
    "PyMuPDF>=1.23.0",
    "pymupdf4llm>=0.2.0",
    "pytesseract",
]
ingest = [
    "habanero",
    "internetarchive",
    "paperscraper",
    # bibtexparser, feedparser, beautifulsoup4, pypaperretriever, and
    # pytorch-crf moved to core dependencies — they're imported
    # unconditionally by modules in ingestors/__init__.py and
    # skol_classifier/v4/, so they can't be optional.
]
mcp = [
    "mcp>=1.22.0",
]
neo4j = [
    "neo4j",
]
# RAPIDS GPU acceleration (requires --extra-index-url=https://pypi.nvidia.com)
gpu = [
    "cudf-cu12",
    "dask-cudf-cu12",
    "cuml-cu12",
    "cugraph-cu12",
]
tools = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-xdist",
    "black>=24.0",
    "ruff",
    "mypy",
]
# Normal dev install — everything runtime AND testing/linting, but
# NOT gpu (which needs --extra-index-url=https://pypi.nvidia.com to
# resolve, so a plain `pip install -e '.[dev]'` would fail otherwise).
# Use this 99% of the time:
#   pip install -e '.[dev]'
dev = [
    "skol[ml,pdf,ingest,mcp,neo4j,tools]",
]
# Absolutely everything, including RAPIDS GPU acceleration.  Requires
# the NVIDIA index URL:
#   pip install --extra-index-url=https://pypi.nvidia.com -e '.[all]'
all = [
    "skol[dev,gpu]",
]

[project.urls]
Homepage = "https://github.com/piggyatbaqaqi/skol"
Repository = "https://github.com/piggyatbaqaqi/skol"

[project.scripts]
skol-ingest = "bin.ingest:main"
skol-train = "bin.train_classifier:main"
skol-predict = "bin.predict_classifier:main"
skol-extract-treatments = "bin.extract_treatments_to_couchdb:main"
skol-embed-treatments = "bin.embed_treatments:main"

[tool.setuptools.packages.find]
include = [
    "skol",
    "skol.*",
    "skol_classifier",
    "skol_classifier.*",
    "ingestors",
    "ingestors.*",
    "training",
    "training.*",
    "yedda_parser",
    "yedda_parser.*",
    "treatments_classifier",
    "treatments_classifier.*",
    "bin",
]
exclude = [
    "build*",
    "dist*",
    "docs*",
    "tests*",
    "django*",
    "webapp*",
    "jupyter*",
    "*.egg-info*",
]

# Root-level Python modules (not in subdirectories)
[tool.setuptools]
py-modules = [
    "constants",
    "couchdb_file",
    "file",
    "fileobj",
    "finder",
    "indexfungorum_authors",
    "iso4",
    "label",
    "line",
    "mycobank_authors",
    "mycobank_species",
    "nomenclature",
    "paragraph",
    "pdf_section_extractor",
    "skol_compat",
    "span",
    "taxa_json_translator",
    "treatment",
    "taxon_clusterer",
    "tokenizer",
]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["*_test.py"]
norecursedirs = [
    ".git",
    "build",
    "dist",
    "docs",
    "tests",
    "django",
    "webapp",
    "*.egg-info",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | django
    | webapp
    | node_modules
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "django",
    "webapp",
    "node_modules",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "django/",
    "webapp/",
    "build/",
    "dist/",
]

[tool.pylint.format]
max-line-length = 120
